# PhaseWeaver

./: .gitignore  MANIFEST.in  Makefile  PROJECT_STATE.md  README.md  pyproject.toml
docs/: crisp_reconstruction_algorithm.md  formfactor_calculation.md  ocean_insight_server.md  ocean_relative_formfactor_path.md
notebooks/: scratch.ipynb
scripts/: reconstruction_dev.py
src/phase_weaver/: __main__.py  app.py  mpl_style.py  qt_theme.py  rc_resources.py  resources.qrc
src/phase_weaver/app/: config.py  logic.py  main.py  plot_model.py  plot_theme.py  state.py  utils.py
src/phase_weaver/app/ui/: band_limit_box.py  control_box.py  controls_panel.py  gaussian_group.py  main_window.py  plot_panel.py  (+8 more)
src/phase_weaver/core/: __init__.py  base.py  constants.py  constraints.py  crisp_reconstruction.py  current_profile.py  form_factor.py  grid.py  measurement.py  profiles.py  reconstruction.py  spectrum.py  time_constraints.py  transfer.py  transform.py  utils.py
src/phase_weaver/model/: profile_model.py  profiles.py
src/phase_weaver/stylelib/: vscode_dark.mplstyle  vscode_light.mplstyle
tests/: conftest.py  test_constraints.py  test_form_factor.py  test_grid.py  test_mpl_style.py  test_profile.py  test_reconstruction.py  test_transform.py  test_transform_dcphysicalrfft.py  test_utils.py
tests/app/: test_controls_panel.py  test_logic.py  test_plot_panel.py
tests/core/: test_base.py  test_constants.py  test_constraints.py  test_crisp_reconstruction.py  test_measurement.py  test_reconstruction.py  test_utils.py
tests/model/: test_profile_model.py  test_profiles.py
