[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "PhaseWeaver"
version = "0.4.1"
description = "Predict the current profile"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "PySide6>=6.6",
  "basedpyright>=1.38.2",
  "numpy>=1.26",
  "pyqtgraph>=0.13.7",
  "pytest>=9.0.2",
  "ruff>=0.15.5",
  "scipy>=1.15.3",
]

[project.optional-dependencies]
dev = ["pytest>=9.0.2"]

[project.scripts]
phase_weaver = "phase_weaver.app:main"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
phase_weaver = ["*.png"]

[tool.basedpyright]
typeCheckingMode = "standard"
reportUnannotatedClassAttribute = false

[dependency-groups]
dev = [
    "pytest-cov>=7.1.0",
]
